better handling of new index versions SERVER-3589