db/dbcommands.cpp
@@ -851,6 +851,17 @@ namespace mongo {
 
             for ( list<BSONObj>::iterator i=all.begin(); i!=all.end(); i++ ) {
                 BSONObj o = *i;
+                if ( o.getIntField("v") > 0 ) {
+                    BSONObjBuilder b;
+                    BSONObjIterator i( o );
+                    while ( i.more() ) {
+                        BSONElement e = i.next();
+                        if ( str::equals( e.fieldName() , "v" ) )
+                            continue;
+                        b.append( e );
+                    }
+                    o = b.obj();
+                }
                 theDataFileMgr.insertWithObjMod( Namespace( toDeleteNs.c_str() ).getSisterNS( "system.indexes" ).c_str() , o , true );
             }
 
