db/index.h
@@ -145,6 +145,11 @@ namespace mongo {
 
         const IndexSpec& getSpec() const;
 
+        void checkVersion() const {
+            // TODO: cache?
+            massert( 13658 , str::stream() << "using a newer index version: " << info.obj() , info.obj().getIntField("v") == 0 );
+        }
+
         string toString() const {
             return info.obj().toString();
         }
